--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOhWSj8c134wKI2gXzwohEx",
+      "authorship_tag": "ABX9TyNEvg2RcyF1u6Dq5oEjcW0C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2142,7 +2142,7 @@
       "metadata": {
         "id": "jaz1O41M-uhv"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2211,7 +2211,7 @@
       "metadata": {
         "id": "bFK8_O5-AJsZ"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2235,7 +2235,7 @@
       "metadata": {
         "id": "dP3JzcH7Be1V"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2291,7 +2291,7 @@
       "metadata": {
         "id": "Kh5TtkJaC-ok"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2308,7 +2308,7 @@
       "metadata": {
         "id": "jVuUufk6EqQ5"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2322,6 +2322,158 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#MULTI TOKEN PREDICTION\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "from torch.nn import init"
+      ],
+      "metadata": {
+        "id": "hjiK4LEDu5tm"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class RMSNorm(nn.Module):\n",
+        "  # RMS will be applied to both hidden state and input embedding . Post that concatenation of hidden state and input embedding will be done\n",
+        "  def __init__(self,d_model,eps:float = 1e-8):\n",
+        "    super().__init__()\n",
+        "    self.eps = eps\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    #x :{batch ,d_model}\n",
+        "    rms = torch.rsqrt(x.pow(2).mean(-1,keepdim=True) + self.eps)\n",
+        "    return x/rms"
+      ],
+      "metadata": {
+        "id": "SXjVuvGYvKiC"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class SimpleMTP(nn.Module):\n",
+        "  def __init__(self,d_model: int,vocab_size: int,num_heads: int=3, nhead: int =2):\n",
+        "\n",
+        "    \"\"\"\n",
+        "      d_model: hidden size (8 in your example)\n",
+        "      num_heads: number of sequential MTP steps(D)\n",
+        "      nhead: attention heads in each Transformer block\n",
+        "    \"\"\"\n",
+        "    super().__init__()\n",
+        "    self.num_heads = num_heads\n",
+        "    self.d_model = d_model\n",
+        "    self.vocab_size = vocab_size\n",
+        "\n",
+        "    #shared modules\n",
+        "    self.rms = RMSNorm(d_model)\n",
+        "    self.embed = nn.Embedding(vocab_size,d_model)\n",
+        "    self.unembed = nn.Linear(d_model,vocab_size, bias= False)\n",
+        "    #share weights between emed and unembed\n",
+        "    self.unembed.weight = self.embed.weight\n",
+        "\n",
+        "    #projection\n",
+        "    self.proj = nn.ModuleList([nn.Linear(2*d_model,d_model) for _ in range(num_heads)])\n",
+        "    self.Transformer = nn.ModuleList([nn.TransformerEncoderLayer(d_model,nhead) for _ in range(num_heads)])\n",
+        "\n",
+        "  def forward(self,token_ids: torch.LongTensor, init_hidden: torch.Tensor = None):\n",
+        "    \"\"\"\n",
+        "    token_ids: (batch,seq_len) integer IDs for your input tokens\n",
+        "    init_hidden: optional (batch,seq_len,d_model) base hidden states\n",
+        "                 if none , uses token_embeddings as intial hidden\n",
+        "    Returns:\n",
+        "      logits_out:Tensor of shape (batch,T-D,D,vocab_size)\n",
+        "      where T = seq_len and D = num_heads\n",
+        "    \"\"\"\n",
+        "    B,T = token_ids.shape\n",
+        "    device = token_ids.device\n",
+        "\n",
+        "    #token embeddings: (B,T,d_model)\n",
+        "    embeds = self.embed(token_ids)\n",
+        "    if init_hidden is None:\n",
+        "      h0_seq = embeds\n",
+        "    else:\n",
+        "      h0_seq = init_hidden\n",
+        "    outputs = []\n",
+        "    max_i = T - self.num_heads -1 #T is the input sequence length and num_heads = 2\n",
+        "    for i in range(0,max_i+1):\n",
+        "      h_prev = h0_seq[:,i,:] #[B, d_model]\n",
+        "      #collect logits for all k at this i\n",
+        "      logits_k = []\n",
+        "      for k in range(self.num_heads):\n",
+        "        future_pos = i +(k+1)\n",
+        "        tok_embed = embeds[:,future_pos,:] #(B,d_model)\n",
+        "        # 1)RMS-normalize\n",
+        "        h_norm = self.rmsnorm(h_prev) # (B,d_model)\n",
+        "        e_norm = self.rmsnorm(tok_embed)  #(B, d_model)\n",
+        "\n",
+        "        # 2) concatenate ->(B,2*d_model)\n",
+        "        merged = torch.cat([h_norm,e_norm], dim = -1)\n",
+        "\n",
+        "        #3) Project back to d_model\n",
+        "        proj = self.projections[k](merged) #(B,d_model)\n",
+        "\n",
+        "        #4)Transformer block (expects shape (B,S,d_model))\n",
+        "        x = proj.unsqueeze(1) #(1,B,d_model)\n",
+        "        x = self.Transformer[k](x) #(1,B,d_model) #get transformer block output\n"
+      ],
+      "metadata": {
+        "id": "fJuObb_C3ZQq"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#MTP prediction\n",
+        "batch_size , seq_len , d_model , vocab_size = 1,8,8,5000\n",
+        "model = SimpleMTP(d_model = d_model, vocab_size = vocab_size , num_heads = 3)\n",
+        "tokens = torch.randint(0,vocab_size,(batch_size,seq_len))\n",
+        "\n",
+        "#forward pass\n",
+        "logits = model(tokens)\n",
+        "print(\"logits.shape\",logits.shape)\n",
+        "#logits shape = [1,4-3,3,5000] ->[B,T-D,D,V] -> batch size , T-D , D , Vocabulary\n",
+        "print(\"Head at k=0 at i =0 logits:\",logits[0,0,0])\n",
+        "pred_ids = logits[0,0].argmax(dim=-1)\n",
+        "print(\"Predicted ids:\",pred_ids) # a length of tensor 3"
+      ],
+      "metadata": {
+        "id": "LQwzu2WSzzjw",
+        "outputId": "f7e4e198-ea1c-481d-f4d8-6c98d1f27458",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 369
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'SimpleMTP' object has no attribute 'rmsnorm'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2043787951.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#forward pass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlogits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"logits.shape\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#logits shape = [1,4-3,3,5000] ->[B,T-D,D,V] -> batch size , T-D , D , Vocabulary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1773\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_compiled_call_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[misc]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1774\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1775\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1776\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1777\u001b[0m     \u001b[0;31m# torchrec tests the code consistency with the following code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1784\u001b[0m                 \u001b[0;32mor\u001b[0m \u001b[0m_global_backward_pre_hooks\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0m_global_backward_hooks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1785\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1786\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1787\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1788\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-805739905.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, token_ids, init_hidden)\u001b[0m\n\u001b[1;32m     51\u001b[0m         \u001b[0mtok_embed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membeds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfuture_pos\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#(B,d_model)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[0;31m# 1)RMS-normalize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m         \u001b[0mh_norm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmsnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh_prev\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# (B,d_model)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m         \u001b[0me_norm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmsnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtok_embed\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m#(B, d_model)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1962\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1963\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1964\u001b[0;31m         raise AttributeError(\n\u001b[0m\u001b[1;32m   1965\u001b[0m             \u001b[0;34mf\"'{type(self).__name__}' object has no attribute '{name}'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1966\u001b[0m         )\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'SimpleMTP' object has no attribute 'rmsnorm'"
+          ]
+        }
+      ]
     }
   ]
 }
