--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEvg2RcyF1u6Dq5oEjcW0C",
+      "authorship_tag": "ABX9TyNucbqLQPV+qizcJzD2Y+sb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2335,7 +2335,7 @@
       "metadata": {
         "id": "hjiK4LEDu5tm"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2355,7 +2355,7 @@
       "metadata": {
         "id": "SXjVuvGYvKiC"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2375,14 +2375,14 @@
         "    self.vocab_size = vocab_size\n",
         "\n",
         "    #shared modules\n",
-        "    self.rms = RMSNorm(d_model)\n",
+        "    self.rmsnorm = RMSNorm(d_model)\n",
         "    self.embed = nn.Embedding(vocab_size,d_model)\n",
         "    self.unembed = nn.Linear(d_model,vocab_size, bias= False)\n",
         "    #share weights between emed and unembed\n",
         "    self.unembed.weight = self.embed.weight\n",
         "\n",
         "    #projection\n",
-        "    self.proj = nn.ModuleList([nn.Linear(2*d_model,d_model) for _ in range(num_heads)])\n",
+        "    self.projections = nn.ModuleList([nn.Linear(2*d_model,d_model) for _ in range(num_heads)])\n",
         "    self.Transformer = nn.ModuleList([nn.TransformerEncoderLayer(d_model,nhead) for _ in range(num_heads)])\n",
         "\n",
         "  def forward(self,token_ids: torch.LongTensor, init_hidden: torch.Tensor = None):\n",
@@ -2393,6 +2393,7 @@
         "    Returns:\n",
         "      logits_out:Tensor of shape (batch,T-D,D,vocab_size)\n",
         "      where T = seq_len and D = num_heads\n",
+        "      T = 8 (depth of number of sequences)\n",
         "    \"\"\"\n",
         "    B,T = token_ids.shape\n",
         "    device = token_ids.device\n",
@@ -2405,8 +2406,9 @@
         "      h0_seq = init_hidden\n",
         "    outputs = []\n",
         "    max_i = T - self.num_heads -1 #T is the input sequence length and num_heads = 2\n",
+        "\n",
         "    for i in range(0,max_i+1):\n",
-        "      h_prev = h0_seq[:,i,:] #[B, d_model]\n",
+        "      h_prev = h0_seq[:,i,:] #[B, d_model] #prev hidden state\n",
         "      #collect logits for all k at this i\n",
         "      logits_k = []\n",
         "      for k in range(self.num_heads):\n",
@@ -2420,16 +2422,29 @@
         "        merged = torch.cat([h_norm,e_norm], dim = -1)\n",
         "\n",
         "        #3) Project back to d_model\n",
-        "        proj = self.projections[k](merged) #(B,d_model)\n",
+        "        proj = self.projections[k](merged) #(B,d_model) #pass the merged matrix of dimension 1X16 to projections layer which is a linear layer to get 1X8 matrix\n",
         "\n",
         "        #4)Transformer block (expects shape (B,S,d_model))\n",
         "        x = proj.unsqueeze(1) #(1,B,d_model)\n",
-        "        x = self.Transformer[k](x) #(1,B,d_model) #get transformer block output\n"
+        "        x = self.Transformer[k](x) #(1,B,d_model) #get transformer block output\n",
+        "        h_curr = x.squeeze(0)\n",
+        "        #(B,d_model) get the output of transformer block.  Transformer block output is an extra dimension and hence using squeeze that is removed\n",
+        "        #5) unembed -> logits\n",
+        "        logits = self.unembed(h_curr) #(B,vocab_size)\n",
+        "        logits_k.append(logits)\n",
+        "        #6)chain hidden for next depth\n",
+        "        h_prev = h_curr\n",
+        "        #stack along depth axis ->(B,D,vocab_size)\n",
+        "      logits_k = torch.stack(logits_k,dim=1)\n",
+        "      outputs.append(logits_k)\n",
+        "    out = torch.stack(outputs,dim=0) #[B,T-D,D,V] [1,5,3,5000]\n",
+        "    out = out.permute(1,0,2,3).contiguous()\n",
+        "    return out\n"
       ],
       "metadata": {
         "id": "fJuObb_C3ZQq"
       },
-      "execution_count": 18,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -2450,27 +2465,21 @@
       ],
       "metadata": {
         "id": "LQwzu2WSzzjw",
-        "outputId": "f7e4e198-ea1c-481d-f4d8-6c98d1f27458",
+        "outputId": "095766e9-999e-42fe-ba60-3886897d0334",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 369
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 32,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'SimpleMTP' object has no attribute 'rmsnorm'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2043787951.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#forward pass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlogits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"logits.shape\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#logits shape = [1,4-3,3,5000] ->[B,T-D,D,V] -> batch size , T-D , D , Vocabulary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1773\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_compiled_call_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[misc]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1774\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1775\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call_impl\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1776\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1777\u001b[0m     \u001b[0;31m# torchrec tests the code consistency with the following code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1784\u001b[0m                 \u001b[0;32mor\u001b[0m \u001b[0m_global_backward_pre_hooks\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0m_global_backward_hooks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1785\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1786\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1787\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1788\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-805739905.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, token_ids, init_hidden)\u001b[0m\n\u001b[1;32m     51\u001b[0m         \u001b[0mtok_embed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0membeds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfuture_pos\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#(B,d_model)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m         \u001b[0;31m# 1)RMS-normalize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m         \u001b[0mh_norm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmsnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mh_prev\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# (B,d_model)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     54\u001b[0m         \u001b[0me_norm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrmsnorm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtok_embed\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m#(B, d_model)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.12/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1962\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1963\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1964\u001b[0;31m         raise AttributeError(\n\u001b[0m\u001b[1;32m   1965\u001b[0m             \u001b[0;34mf\"'{type(self).__name__}' object has no attribute '{name}'\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1966\u001b[0m         )\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'SimpleMTP' object has no attribute 'rmsnorm'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "logits.shape torch.Size([1, 5, 3, 5000])\n",
+            "Head at k=0 at i =0 logits: tensor([-1.8050,  0.8733,  0.3405,  ...,  3.0251, -3.3564, -0.2000],\n",
+            "       grad_fn=<SelectBackward0>)\n",
+            "Predicted ids: tensor([1159,  694,  134])\n"
           ]
         }
       ]
