--- a/Mixture_of_Expert.ipynb
+++ b/Mixture_of_Expert.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNucbqLQPV+qizcJzD2Y+sb",
+      "authorship_tag": "ABX9TyPG+QvGVt1p4fs8/LJ8mWK6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1680,42 +1680,10 @@
         "top_k_logits , top_k_indices"
       ],
       "metadata": {
-        "id": "WycJsd8Zime0",
-        "outputId": "28d6aa41-9643-4541-a626-1009f9731a0b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "WycJsd8Zime0"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(tensor([[[ 0.5148, -0.3222],\n",
-              "          [ 0.4683,  0.3065],\n",
-              "          [ 0.5787, -0.1454],\n",
-              "          [ 0.0301, -0.1731]],\n",
-              " \n",
-              "         [[ 0.4308, -0.0073],\n",
-              "          [ 0.6029,  0.3178],\n",
-              "          [ 0.6333,  0.3774],\n",
-              "          [ 1.4708,  0.8050]]], grad_fn=<TopkBackward0>),\n",
-              " tensor([[[1, 3],\n",
-              "          [1, 0],\n",
-              "          [2, 3],\n",
-              "          [3, 0]],\n",
-              " \n",
-              "         [[3, 1],\n",
-              "          [1, 0],\n",
-              "          [0, 1],\n",
-              "          [2, 3]]]))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 61
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1725,33 +1693,10 @@
         "sparse_logits"
       ],
       "metadata": {
-        "id": "ypcpU0ozlzpS",
-        "outputId": "fe96df93-7189-4574-9ba9-d195524f2d59",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ypcpU0ozlzpS"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[[   -inf,  0.5148,    -inf, -0.3222],\n",
-              "         [ 0.3065,  0.4683,    -inf,    -inf],\n",
-              "         [   -inf,    -inf,  0.5787, -0.1454],\n",
-              "         [-0.1731,    -inf,    -inf,  0.0301]],\n",
-              "\n",
-              "        [[   -inf, -0.0073,    -inf,  0.4308],\n",
-              "         [ 0.3178,  0.6029,    -inf,    -inf],\n",
-              "         [ 0.6333,  0.3774,    -inf,    -inf],\n",
-              "         [   -inf,    -inf,  1.4708,  0.8050]]], grad_fn=<ScatterBackward0>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 62
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1761,33 +1706,10 @@
         "gating_output"
       ],
       "metadata": {
-        "id": "SbCUS-u_unDN",
-        "outputId": "f4f59671-83ff-4a3a-e9ee-a2d518067f5f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "SbCUS-u_unDN"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[[0.0000, 0.6978, 0.0000, 0.3022],\n",
-              "         [0.4596, 0.5404, 0.0000, 0.0000],\n",
-              "         [0.0000, 0.0000, 0.6735, 0.3265],\n",
-              "         [0.4494, 0.0000, 0.0000, 0.5506]],\n",
-              "\n",
-              "        [[0.0000, 0.3922, 0.0000, 0.6078],\n",
-              "         [0.4292, 0.5708, 0.0000, 0.0000],\n",
-              "         [0.5636, 0.4364, 0.0000, 0.0000],\n",
-              "         [0.0000, 0.0000, 0.6606, 0.3394]]], grad_fn=<SoftmaxBackward0>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 63
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1826,43 +1748,10 @@
         "gating_output.shape , gating_output , indices"
       ],
       "metadata": {
-        "id": "Lt3yf9tzwTEB",
-        "outputId": "161fdfc4-0f82-49a5-a338-12b5c790f708",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Lt3yf9tzwTEB"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(torch.Size([2, 4, 4]),\n",
-              " tensor([[[0.0000, 0.6366, 0.3634, 0.0000],\n",
-              "          [0.0000, 0.4316, 0.0000, 0.5684],\n",
-              "          [0.5030, 0.0000, 0.0000, 0.4970],\n",
-              "          [0.0000, 0.0000, 0.4805, 0.5195]],\n",
-              " \n",
-              "         [[0.4824, 0.0000, 0.0000, 0.5176],\n",
-              "          [0.4244, 0.0000, 0.5756, 0.0000],\n",
-              "          [0.1620, 0.0000, 0.0000, 0.8380],\n",
-              "          [0.4032, 0.5968, 0.0000, 0.0000]]], grad_fn=<SoftmaxBackward0>),\n",
-              " tensor([[[1, 2],\n",
-              "          [3, 1],\n",
-              "          [0, 3],\n",
-              "          [3, 2]],\n",
-              " \n",
-              "         [[3, 0],\n",
-              "          [2, 0],\n",
-              "          [3, 0],\n",
-              "          [1, 0]]]))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 65
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1904,44 +1793,10 @@
         "gating_output.shape , gating_output , indices"
       ],
       "metadata": {
-        "id": "X_0kXW6iyjRU",
-        "outputId": "02acbc70-b7e6-4fda-d4a1-712a58065d14",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "X_0kXW6iyjRU"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(torch.Size([2, 4, 8]),\n",
-              " tensor([[[0.0000, 0.0000, 0.3578, 0.6422, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.5695, 0.0000, 0.0000, 0.0000, 0.0000, 0.4305, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.5943, 0.0000, 0.0000, 0.0000, 0.0000, 0.4057],\n",
-              "          [0.5610, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.4390]],\n",
-              " \n",
-              "         [[0.4770, 0.5230, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.5314, 0.0000, 0.0000, 0.4686, 0.0000],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.3633, 0.0000, 0.0000, 0.0000, 0.6367],\n",
-              "          [0.0000, 0.0000, 0.0000, 0.7481, 0.0000, 0.0000, 0.0000, 0.2519]]],\n",
-              "        grad_fn=<SoftmaxBackward0>),\n",
-              " tensor([[[3, 2],\n",
-              "          [1, 6],\n",
-              "          [2, 7],\n",
-              "          [0, 7]],\n",
-              " \n",
-              "         [[1, 0],\n",
-              "          [3, 6],\n",
-              "          [7, 3],\n",
-              "          [3, 7]]]))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 67
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2081,22 +1936,10 @@
         "  return out"
       ],
       "metadata": {
-        "id": "w9fFvcZR81h6",
-        "outputId": "530e0ce3-2e2e-488f-aa3e-0ac6b6367fb5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "w9fFvcZR81h6"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "device cpu\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2326,6 +2169,81 @@
     {
       "cell_type": "code",
       "source": [
+        "#using mlflow\n",
+        "m = model.to(device)\n",
+        "#print the number of parameters in the model\n",
+        "print(sum(p.numel() for p in m.parameters())/1e6,'M parameters')\n",
+        "\n",
+        "#create  a Pytorch optimizer\n",
+        "optimizer = torch.optim.AdamW(model.parameters(),lr=learning_rate)\n",
+        "#mlflow.set_experiment(\"makeMOE\")\n",
+        "with mlflow.start.run():\n",
+        "  for iter in range(max_iters):\n",
+        "    #every once in a while evaluate the loss on train and val sets\n",
+        "    if iter % eval_interval == 0 or iter == max_iters -1:\n",
+        "      losses = estimate_loss()\n",
+        "      print(f\"step {iter}: train loss {losses['train']:.4f}, val loss {losses['val']:.4f}\")\n",
+        "      metrics = {\"train_loss\":float(losses['train']), \"val_loss\":float(losses['val'])}\n",
+        "      mlflow.log_metrics(metrics,step=iter)\n",
+        "    #sample a batch of data\n",
+        "    xb,yb = get_batch('train')\n",
+        "    #evaluate the loss\n",
+        "    xb,yb = get_batch('train')\n",
+        "    logits,loss = model(xb,yb)\n",
+        "    optimizer.zero_grad(set_to_none=True)\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "print(loss.item())\n",
+        ""
+      ],
+      "metadata": {
+        "id": "h7wvfC-IdWXR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#not using mlflow\n",
+        "m = model.to(device)\n",
+        "#print the number of parameters in the model\n",
+        "print(sum(p.numel() for p in m.parameters())/1e6,'M parameters')\n",
+        "\n",
+        "#create  a Pytorch optimizer\n",
+        "optimizer = torch.optim.AdamW(model.parameters(),lr=learning_rate)\n",
+        "for iter in range(max_iters):\n",
+        "  if iter % eval_interval == 0 or iter == max_iters -1:\n",
+        "    losses = estimate_loss()\n",
+        "    print(f\"step {iter}: train loss {losses['train']:.4f}, val loss {losses['val']:.4f}\")\n",
+        "  xb,yb = get_batch('train')\n",
+        "  logits,loss = model(xb,yb)\n",
+        "  optimizer.zero_grad(set_to_none=True)\n",
+        "  loss.backward()\n",
+        "  optimizer.step()\n",
+        "print(loss.item())"
+      ],
+      "metadata": {
+        "id": "t9kaMg29dWiR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "context = torch.zeros((1,1),dtype=torch.long,device=device)\n",
+        "print(decode(m.generate(context,max_new_tokens=2000)[0].tolist()))"
+      ],
+      "metadata": {
+        "id": "NuJmkWMBnlIE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#MULTI TOKEN PREDICTION\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -2444,7 +2362,7 @@
       "metadata": {
         "id": "fJuObb_C3ZQq"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2464,22 +2382,47 @@
         "print(\"Predicted ids:\",pred_ids) # a length of tensor 3"
       ],
       "metadata": {
-        "id": "LQwzu2WSzzjw",
-        "outputId": "095766e9-999e-42fe-ba60-3886897d0334",
+        "id": "LQwzu2WSzzjw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#calculate the loss\n",
+        "batch_size , seq_len , vocab_size = 1,8,5000\n",
+        "targets = torch.randint(0,vocab_size,(batch_size,seq_len))\n",
+        "logits = model(tokens) # shape(1,5,3,5000)\n",
+        "B,L,D,V = logits.shape #(1,5,3,5000)\n",
+        "_,T = targets.shape #(1,8)\n",
+        "assert L == T-D  # 5 == 8-3\n",
+        "\n",
+        "#Double-loop  loss:\n",
+        "loss = 0.0\n",
+        "for i in range(L):   #i = 0....4\n",
+        "  for k in range(D): #k = 0....2\n",
+        "    logits_ik = logits[:,i,k,:] # (1,5000)\n",
+        "    targets_ik = targets[:,i+(k+1)] #(1,)\n",
+        "    loss += F.cross_entropy(logits_ik,targets_ik)\n",
+        "    #print(loss)\n",
+        "loss = loss/(L*D) #take mean of loss\n",
+        "print(\"MTP Loss:\",loss.item())"
+      ],
+      "metadata": {
+        "id": "glYgNSpCQRBm",
+        "outputId": "3ab27823-a2d9-40cc-a063-acb562f1d54b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "logits.shape torch.Size([1, 5, 3, 5000])\n",
-            "Head at k=0 at i =0 logits: tensor([-1.8050,  0.8733,  0.3405,  ...,  3.0251, -3.3564, -0.2000],\n",
-            "       grad_fn=<SelectBackward0>)\n",
-            "Predicted ids: tensor([1159,  694,  134])\n"
+            "MTP Loss: 12.72371768951416\n"
           ]
         }
       ]
