--- a/Coding_Agent.ipynb
+++ b/Coding_Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUT+EB5bLGUU2+x7Hh2Qu2",
+      "authorship_tag": "ABX9TyO3nZOpk2qzee+3+HKc8LdQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Code for Coding Agent ->Credit\n",
+        "https://github.com/sayakpaul/hf-codegen/blob/main/data/parallel_clone_repos.py\n"
+      ],
+      "metadata": {
+        "id": "SI2-PMA4vuRv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%pip install trl\n",
@@ -40,6 +50,68 @@
         "id": "U3b4RPt9WcuF"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install PyGithub\n",
+        "import os\n",
+        "import subprocess\n",
+        "from multiprocessing import Pool\n",
+        "from github import Github"
+      ],
+      "metadata": {
+        "id": "jhvmx13nv6qW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#code for generating data for training the Coding Agent Model\n",
+        "#code will scrap the hugging face oublic repos\n",
+        "ORG = \"huggingface\"\n",
+        "MIRROR_DIRECTORY = \"hf_public_repos\"\n",
+        "\n",
+        "def get_repos(username,access_token = None,include_fork = False):\n",
+        "  \"\"\" Fetches repositories for a particular GitHub user\n",
+        "  Courtesy: Chansung Park.\n",
+        "  \"\"\"\n",
+        "  g = Github(access_token)\n",
+        "  user = g.get_user(username)\n",
+        "  repos = []\n",
+        "  for repo in user.get_repos():\n",
+        "    if not include_fork and repo.fork:\n",
+        "          repos.append(repo.name)\n",
+        "    else:\n",
+        "      if include_fork is True:\n",
+        "        repos.append(repo.name)\n",
+        "  return repos\n",
+        "\n",
+        "  def mirror_repository(repository):\n",
+        "    \"\"\"Create the mirror directory if it doesn't exists \"\"\"\n",
+        "    if not os.path.exists(MIRROR_DIRECTORY):\n",
+        "      os.makedirs(MIRROR_DIRECTORY)\n",
+        "\n",
+        "    #get the list of repositories in the organisation\n",
+        "    if not os.enviorn[\"GH_ACCESS_TOKEN\"]:\n",
+        "      raise ValueError(\"You must set 'GH_ACCESS_TOKEN' as an env variable\")\n",
+        "    repos = get_repos(ORG,os.environ[\"GH_ACCESS_TOKEN\"])\n",
+        "    print(f\"Total Repositories found:{len(repositories)}.\")\n",
+        "    #mirror repositories using multiprocessing\n",
+        "    print(\"Cloning Repositories.\")\n",
+        "    with Pool() as pool:\n",
+        "      pool.map(mirror_repository,repos)\n",
+        "\n",
+        "    if __name__ == \"__main__\":\n",
+        "      mirror_repositories()"
+      ],
+      "metadata": {
+        "id": "CgBz0bDIwFef"
+      },
+      "execution_count": 12,
       "outputs": []
     },
     {
