--- a/Coding_Agent.ipynb
+++ b/Coding_Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO3nZOpk2qzee+3+HKc8LdQ",
+      "authorship_tag": "ABX9TyMZBkr+4SRLbe7HYaqfInh3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,8 @@
         "%pip install transformers datasets evaluate bitsandbytes accelerate peft einops safetensors\n",
         "%pip install tiktoken\n",
         "%pip install wandb\n",
-        "%pip install tqdm"
+        "%pip install tqdm\n",
+        "!pip install datasets nbformat pandas"
       ],
       "metadata": {
         "id": "U3b4RPt9WcuF"
@@ -90,28 +91,183 @@
         "        repos.append(repo.name)\n",
         "  return repos\n",
         "\n",
-        "  def mirror_repository(repository):\n",
-        "    \"\"\"Create the mirror directory if it doesn't exists \"\"\"\n",
-        "    if not os.path.exists(MIRROR_DIRECTORY):\n",
-        "      os.makedirs(MIRROR_DIRECTORY)\n",
+        "def mirror_repository(repository):\n",
+        "  \"\"\" Locally clones a repository \"\"\"\n",
+        "  repository_url = f\"https://github.com/{ORG}/{repository}.git\"\n",
+        "  repository_path = f\"{MIRROR_DIRECTORY}/{repository}\"\n",
+        "  #clone the repository\n",
+        "  subprocess.run([\"git\",\"clone\",repository_url,repository_path])\n",
         "\n",
-        "    #get the list of repositories in the organisation\n",
-        "    if not os.enviorn[\"GH_ACCESS_TOKEN\"]:\n",
-        "      raise ValueError(\"You must set 'GH_ACCESS_TOKEN' as an env variable\")\n",
-        "    repos = get_repos(ORG,os.environ[\"GH_ACCESS_TOKEN\"])\n",
-        "    print(f\"Total Repositories found:{len(repositories)}.\")\n",
-        "    #mirror repositories using multiprocessing\n",
-        "    print(\"Cloning Repositories.\")\n",
-        "    with Pool() as pool:\n",
-        "      pool.map(mirror_repository,repos)\n",
+        "def mirror_repositories():\n",
+        "  \"\"\"Create the mirror directory if it doesn't exists \"\"\"\n",
+        "  if not os.path.exists(MIRROR_DIRECTORY):\n",
+        "    os.makedirs(MIRROR_DIRECTORY)\n",
         "\n",
-        "    if __name__ == \"__main__\":\n",
-        "      mirror_repositories()"
+        "  #get the list of repositories in the organisation\n",
+        "  if not os.enviorn[\"GH_ACCESS_TOKEN\"]:\n",
+        "    raise ValueError(\"You must set 'GH_ACCESS_TOKEN' as an env variable\")\n",
+        "  repos = get_repos(ORG,os.environ[\"GH_ACCESS_TOKEN\"])\n",
+        "  print(f\"Total Repositories found:{len(repositories)}.\")\n",
+        "  #mirror repositories using multiprocessing\n",
+        "  print(\"Cloning Repositories.\")\n",
+        "  with Pool() as pool:\n",
+        "    pool.map(mirror_repository,repos)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  mirror_repositories()"
       ],
       "metadata": {
         "id": "CgBz0bDIwFef"
       },
-      "execution_count": 12,
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#prepare dataset.py\n",
+        "import os\n",
+        "import pandas as pd\n",
+        "from nbformat import reads , NO_CONVERT\n",
+        "from tqdm import tqdm\n",
+        "from datasets import Dataset\n",
+        "from typing import Dict\n",
+        "from huggingface_hub import create_repo , upload_folder\n",
+        "import tempfile\n",
+        "import subprocess\n",
+        "\n",
+        "MIRROR_DIRECTORY = \"hf_public_repos\"\n",
+        "DATASET_ID =\"hf-codegen\"\n",
+        "SERIALIZE_IN_CHUNKS = 10000\n",
+        "FEATHER_FORMAT = \"ftr\"\n",
+        "\n",
+        "#block the following format\n",
+        "IMAGE = [\"png\",\"jpg\",\"jpeg\",\"gif\"]\n",
+        "AUDIO = [\"mp3\",\"wav\",\"flac\",\"ogg\",\"mid\",\"webm\"]\n",
+        "VIDEO = [\"mp4\",\"avi\",\"mkv\",\"jfif\"]\n",
+        "DOC = [\"key\",\"PDF\",\"pdf\",\"docx\",\"xlsx\",\"pptx\"]\n",
+        "ARCHIVE = [\"jar\",\"aar\",\"gz\",\"zip\",\"bz2\"]\n",
+        "MODEL = [\"onnx\",\"pickle\",\"model\",\"neuron\"]\n",
+        "OTHERS = [\"npy\",\"index\",\"inv\",\"index\",\"DS_Store\",\"rdb\",\"pack\",\"idx\",\"glb\",\"gltf\",\"len\",\"otf\",\"unitypackage\",\"ttf\",\"xz\",\"pcm\",\"opus\"]\n",
+        "ANTI_FORMATS = tuple(IMAGE+VIDEO+DOC+AUDIO+ARCHIVE+OTHERS)\n",
+        "\n",
+        "def upload_to_hub(file_format:str,repo_id:str):\n",
+        "  \"\"\" Moves all the files matching 'file format' to a folder and upload the folder to the Hugging Face Hub.\"\"\"\n",
+        "  repo_id = create_repo(repo_id=repo_id,exist_ok=True, repo_type = \"dataset\").repo_id\n",
+        "  with tempfile.TemporaryDirectory() as tmpdirname:\n",
+        "    os.makedirs(tmpdirname)\n",
+        "    command = f\"mv *.{file_format} tmp_dirname\"\n",
+        "    _=subprocess.run(command.split())\n",
+        "    upload_folder(repo_id = repo_id,folder_path = tmpdirname,repo_type=\"dataset\")\n",
+        "\n",
+        "def filter_code_cell(cell) ->bool:\n",
+        "  \"\"\" Filters a code cell w.r.t shell commands, etc.\"\"\"\n",
+        "  only_shell = cell[\"source\"].startswith(\"!\")\n",
+        "  only_magic = \"%%capture\" in cell[\"source\"]\n",
+        "  if only_shell or only_magic:\n",
+        "    return False\n",
+        "  else:\n",
+        "    return True\n",
+        "\n",
+        "def process_file(directory_name:str, file_path:str) -> Dict[str,str]:\n",
+        "  \"\"\" Processes a single file\"\"\"\n",
+        "  try:\n",
+        "    with open(file_path,\"r\", encoding =\"utf-8\") as file:\n",
+        "      content = file.read()\n",
+        "      if file_path.endswith(\"ipynb\"):\n",
+        "        code_cell_str = \"\"\n",
+        "        notebook = reads(content,as_version = NO_CONVERT)\n",
+        "        code_cells = [\n",
+        "            c for c in notebook.cells if c.cell_type == \"code\" and filter_code_cell(c)\n",
+        "        ]\n",
+        "        for cell in code_cells:\n",
+        "          code_cell_str += \"\\n\".join(cell[\"source\"])\n",
+        "        content = code_cell_str\n",
+        "  except Exception:\n",
+        "      content =\"\"\n",
+        "  return {\n",
+        "      \"repo_id\":directory_name,\n",
+        "      \"file_path\":file_path,\n",
+        "      \"content\":content,\n",
+        "  }\n",
+        "def read_repository_files(directory) ->pd.DataFrame:\n",
+        "  \"\"\" Reads the files from the locally cloned repository\"\"\"\n",
+        "  file_paths = []\n",
+        "  df = pd.DataFrame(columns=[\"repo_id\",\"file_path\",\"content\"])\n",
+        "  chunk_flag = 0\n",
+        "\n",
+        "  #Recursively find all files within the directory\n",
+        "  for root,_,files in os.walk(directory):\n",
+        "    for file in files:\n",
+        "      file_path = os.path.join(root,file)\n",
+        "      if not file_path.endswith(ANTI_FORMATS) and all(\n",
+        "          k not in file_path for k in [\".git\",\"__pycache__\",\"xcodeproj\"]\n",
+        "\n",
+        "      ):\n",
+        "        file_paths.append((os.path.dirname(root),file_path))\n",
+        "  #Process file sequentially\n",
+        "  print(f\"Total number of files found: {len(file_paths)}\")\n",
+        "  print(\"Reading file contents....\")\n",
+        "  for i , (directory_name,file_path) in enumerate(tqdm(file_paths)):\n",
+        "    file_content = process_file(directory_name,file_path)\n",
+        "    if file_content[\"content\"] !=\"\":\n",
+        "      temp_df = pd.DataFrame.from_dict([file_content])\n",
+        "      df = pd.concat([df,temp_df],ignore_index = True)\n",
+        "      if(\n",
+        "          SERIALIZE_IN_CHUNKS and len(df) !=0 and (len(df) % SERIALIZE_IN_CHUNKS ==0)\n",
+        "      ):\n",
+        "        df_path = f\"df_chunk_{chunk_flag}_{len(df)}.{FEATHER_FORMAT}\"\n",
+        "        print(f\"Serializing dataframe to {df_path}...\")\n",
+        "        df.reset_index().to_feather(df_path)\n",
+        "        del df\n",
+        "        df = pd.DataFrame(columns=[\"repo_id\",\"file_path\",\"content\"])\n",
+        "        chunk_flag +=1\n",
+        "  return df\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  df = read_repository_files(MIRROR_DIRECTORY)\n",
+        "  print(\"DataFrame created , creating dataset...\")\n",
+        "  upload_to_hub(file_format= FILE_FORMAT,repo_id=DATASET_ID)\n",
+        "  print(f\"{FEATHER_FORMAT} files uploaded to Hugging Face Hub.\")\n",
+        "  if not SERIALIZE_IN_CHUNKS:\n",
+        "    dataset = Dataset.from_pandas(df)\n",
+        "    dataset.push_to_hub(DATASET_ID)"
+      ],
+      "metadata": {
+        "id": "vBLgMTyl2NDO"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from huggingface_hub import snapshot_download\n",
+        "from datasets import Dataset\n",
+        "from tqdm import tqdm\n",
+        "import pandas as pd\n",
+        "import glob\n",
+        "\n",
+        "REPO_ID = \"\"\n",
+        "FEATHER_FORMAT = \"*.ftr\"\n",
+        "if __name__ ==\"__main__\":\n",
+        "  folder_path = snapshot_download(repo_id = REPO_ID, allow_patterns =f\"*.{FEATHER_FORMAT}\",repo_type = \"dataset\")\n",
+        "  feather_files = glob.glob(f\"{folder_path}/raw_csvs/*.{FEATHER_FORMAT}\")\n",
+        "  print(folder_path,len(feather_file))\n",
+        "  all_dfs =[]\n",
+        "  for file in tqdm(feather_files):\n",
+        "    df = pd.read_feather(file)\n",
+        "    all_dfs.append(df)\n",
+        "\n",
+        "  final_df = pd.concat(all_dfs,ignore_index = True)\n",
+        "  print(f\"Final DF prepared containing {len(final_df)} rows.\")\n",
+        "  dataset = Dataset.from_pandas(final_df)\n",
+        "  dataset.push_to_hub(REPO_ID)"
+      ],
+      "metadata": {
+        "id": "OKr2BUNVFbV0"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -186,7 +342,7 @@
         "\n",
         "      if truncate_or_pad:\n",
         "        #compute the total token length of the FIM prompt\n",
-        "        new_length = suffix.shape[0] + prefix.shape[0] + middle.shape[0] +3\n",
+        "        new_length = suffix.shape[0] + prefix.shape[0] + middle.shape[0] +3 #SPM\n",
         "        diff = new_length - len(sample)\n",
         "        if diff>0:\n",
         "          if suffix.shape[0] <=diff:\n",
@@ -208,7 +364,7 @@
       "metadata": {
         "id": "PhfP8aGbX0TC"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
