--- a/Qwen3_0.ipynb
+++ b/Qwen3_0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwLJJr4ulecjg0gBuIK5Qv",
+      "authorship_tag": "ABX9TyO02feOay3c+3u5yoxb9KBd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -209,7 +209,7 @@
         "  def __init__(\n",
         "      self,d_in,num_heads,num_kv_groups,head_dim=None, qk_norm = False , dtype = None\n",
         "      ): #multiple query heads share same key and value projections\n",
-        "      #the benefit of GQA is faster inference and better understanding on the text ...\n",
+        "      #the benefit of GQA is faster inference and better understanding on the text .... faster inference due to smaller KV Cache size.... as attention heads are grouped\n",
         "      #no of heads = no of group of queries....\n",
         "    super().__init__()\n",
         "    assert num_heads % num_kv_groups == 0, \"num_heads must be divisible by num_kv_groups\"\n",
